k8s/minna-no-k8s/4/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: app
spec:
  selector:
    app: helloworld
  ports:
  - protocol: TCP
    port: 5000
